--- a/Project.toml
+++ b/Project.toml
@@ -2,6 +2,7 @@ name = "age-optimal-multisource-flooding"
 authors = ["Leonard Fisser"]
 
 [deps]
+Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
